Multi-command pipelines